--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "frontend"
   ],
   "scripts": {
-    "dev": "npm-run-all --parallel dev:*",
+    "dev": "concurrently -k -n BACKEND,FRONTEND \"npm --workspace backend run dev\" \"npm --workspace frontend run dev\"",
     "dev:api": "npm --workspace backend run dev",
     "dev:web": "npm --workspace frontend run dev",
     "lint": "npm-run-all --parallel lint:*",
@@ -14,6 +14,7 @@
     "lint:web": "npm --workspace frontend run lint || true"
   },
   "devDependencies": {
+    "concurrently": "^9.2.1",
     "npm-run-all": "^4.1.5"
   }
 }
