--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "devDependencies": {
     "concurrently": "^9.2.1",
     "npm-run-all": "^4.1.5"
+  },
+  "dependencies": {
+    "patch-package": "^8.0.1"
   }
 }
