--- a/backend/package.json
+++ b/backend/package.json
@@ -45,7 +45,7 @@
     "@types/node": "^22.15.18",
     "eslint": "^9.26.0",
     "hot-hook": "^0.4.0",
-    "pino-pretty": "^13.0.0",
+    "pino-pretty": "^13.1.2",
     "prettier": "^3.5.3",
     "ts-node-maintained": "^10.9.5",
     "typescript": "~5.8"
@@ -55,6 +55,7 @@
     "@adonisjs/core": "^6.18.0",
     "@adonisjs/cors": "^2.2.1",
     "@adonisjs/lucid": "^21.6.1",
+    "@adonisjs/session": "^7.5.1",
     "@vinejs/vine": "^3.0.1",
     "luxon": "^3.7.2",
     "mysql2": "^3.15.3",
