--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -27,7 +27,7 @@ jobs:
         run: npm ci
 
       - name: Run Prettier
-        run: npx prettier . --write
+        run: npx prettier . --write --ignore-path .prettierignore
 
       - name: Check for changes
         id: changes
