--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "bootstrap": "^5.3.8",
+    "bootstrap-vue-next": "^0.40.8",
     "pinia": "^3.0.3",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3"
