--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "npm-run-all2": "^8.0.4",
     "patch-package": "^8.0.1",
     "prettier": "3.6.2",
+    "sass": "^1.94.2",
     "typescript": "~5.9.0",
     "vite": "^7.1.11",
     "vite-plugin-vue-devtools": "^8.0.3",
