--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,3 +10,7 @@ DB_USER=root
 DB_PASSWORD=root
 DB_DATABASE=app
 SESSION_DRIVER=cookie
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USERNAME=username
+SMTP_PASSWORD=password
