--- a/backend/.env.example
+++ b/backend/.env.example
@@ -14,3 +14,5 @@ SMTP_HOST=
 SMTP_PORT=
 SMTP_USERNAME=username
 SMTP_PASSWORD=password
+APP_URL=https://api.my-website.ch
+WEB_URL=http://localhost:5173
