--- a/backend/package.json
+++ b/backend/package.json
@@ -58,6 +58,7 @@
     "@adonisjs/mail": "^9.2.2",
     "@adonisjs/session": "^7.5.1",
     "@vinejs/vine": "^3.0.1",
+    "edge.js": "^6.3.0",
     "luxon": "^3.7.2",
     "mysql2": "^3.15.3",
     "reflect-metadata": "^0.2.2"
