feat: implemented spam limiter

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -16,3 +16,4 @@ SMTP_USERNAME=username
 SMTP_PASSWORD=password
 APP_URL=https://api.my-website.ch
 WEB_URL=http://localhost:5173
+LIMITER_STORE=database
