--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -58,7 +58,7 @@ jobs:
           cache-dependency-path: backend/package-lock.json
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Run Migrations
         run: node ace migration:run --force
