--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -10,6 +10,7 @@ on:
     paths:
       - 'backend/**'
   workflow_dispatch:
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -19,14 +20,19 @@ jobs:
         working-directory: ./backend
 
     services:
-       mysql:
+      mysql:
         image: mysql:8.0
         env:
-           MYSQL_ROOT_PASSWORD: root
-           MYSQL_DATABASE: traveldb_test
+          MYSQL_ROOT_PASSWORD: root
+          MYSQL_DATABASE: traveldb_test
         ports:
-           - 3306:3306
-        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+          - 3306:3306
+        options: >
+          --health-cmd "mysqladmin ping -uroot -proot --silent"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     env:
       NODE_ENV: test
       PORT: 3333
@@ -39,10 +45,10 @@ jobs:
       DB_USER: root
       DB_PASSWORD: root
       DB_DATABASE: traveldb_test
-      
+
       SESSION_DRIVER: memory
       LIMITER_STORE: memory
-      
+
       SMTP_HOST: localhost
       SMTP_PORT: 587
 
@@ -57,6 +63,17 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+
+      - name: Wait for MySQL
+        run: |
+          for i in {1..20}; do
+            if mysqladmin ping -h"${DB_HOST}" -uroot -p"${DB_PASSWORD}" --silent; then
+              echo "MySQL is ready!"
+              break
+            fi
+            echo "Waiting for MySQL..."
+            sleep 2
+          done
 
       - name: Run Migrations
         run: node ace migration:run --force
