--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -28,7 +28,7 @@ jobs:
         ports:
           - 3306:3306
         options: >
-          options: >- --health-cmd="mysqladmin ping -uroot -proot --silent" --health-interval=10s --health-timeout=5s --health-retries=5
+          options: --health-cmd="mysqladmin ping -uroot -proot --silent" --health-interval=10s --health-timeout=5s --health-retries=5
 
     env:
       NODE_ENV: test
