--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -55,10 +55,10 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v6
         with:
-          node-version: 24
+          node-version: 20
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Wait for MySQL
         run: |
