--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -60,22 +60,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Wait for MySQL
-        run: |
-          for i in {1..20}; do
-            if mysqladmin ping -h"${DB_HOST}" -uroot -p"${DB_PASSWORD}" --silent; then
-              echo "MySQL is ready!"
-              break
-            fi
-            echo "Waiting for MySQL..."
-            sleep 2
-          done
+      - name: Fix SWC Linux binary
+        run: npm install @swc/core-linux-x64-gnu --no-save
 
-      - name: Rebuild SWC
-        run: npm rebuild @swc/core
-        
-      - name: Run Migrations
-        run: node ace migration:run --force
-
-      - name: Run Tests
-        run: npm run test
+      - name: Build
+        run: npm run build
