--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,6 +66,17 @@ jobs:
         run: |
           tar -czf backend-build.tar.gz -C backend/build .
 
+      - name: Prepare Directories via SSH
+        uses: appleboy/ssh-action@823bd89e131d8d508129f9443cad5855e9ba96f0
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          password: ${{ secrets.SSH_PASSWORD }}
+          port: ${{ secrets.SSH_PORT }}
+          script: |
+            mkdir -p /srv/customer/temp_deploy/
+            rm -rf /srv/customer/temp_deploy/*
+
       - name: Copy build via SCP
         uses: appleboy/scp-action@ff85246acaad7bdce478db94a363cd2bf7c90345
         with:
