--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,44 +66,36 @@ jobs:
         run: |
           tar -czf backend-build.tar.gz -C backend/build .
 
-      - name: Prepare Directories via SSH
-        uses: appleboy/ssh-action@823bd89e131d8d508129f9443cad5855e9ba96f0
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          password: ${{ secrets.SSH_PASSWORD }}
-          port: ${{ secrets.SSH_PORT }}
-          script: |
-            mkdir -p /srv/customer/temp_deploy/
-            rm -rf /srv/customer/temp_deploy/*
+      - name: Install SSHPass
+        run: sudo apt-get update && sudo apt-get install -y sshpass
+
+      - name: Copy build via SCP (Password)
+        run: |
+          mkdir -p ~/.ssh
+          ssh-keyscan -p ${{ secrets.SSH_PORT }} ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+
+          echo "Nettoyage..."
+          sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -p ${{ secrets.SSH_PORT }} ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "mkdir -p /srv/customer/temp_deploy/ && rm -rf /srv/customer/temp_deploy/*"
+
+          echo "Envoi..."
+          sshpass -p "${{ secrets.SSH_PASSWORD }}" scp -P ${{ secrets.SSH_PORT }} backend-build.tar.gz ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/srv/customer/temp_deploy/
 
       - name: Copy build via SCP
-        uses: appleboy/scp-action@ff85246acaad7bdce478db94a363cd2bf7c90345
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          password: ${{ secrets.SSH_PASSWORD }}
-          port: ${{ secrets.SSH_PORT }}
-          source: "backend-build.tar.gz"
-          target: "/srv/customer/temp_deploy/"
+        run: |
+          mkdir -p ~/.ssh
+          ssh-keyscan -p ${{ secrets.SSH_PORT }} ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+
+          sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -p ${{ secrets.SSH_PORT }} ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "mkdir -p /srv/customer/temp_deploy/ && rm -rf /srv/customer/temp_deploy/*"
+
+          sshpass -p "${{ secrets.SSH_PASSWORD }}" scp -P ${{ secrets.SSH_PORT }} backend-build.tar.gz ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/srv/customer/temp_deploy/
 
       - name: Remote Install & Restart
-        uses: appleboy/ssh-action@823bd89e131d8d508129f9443cad5855e9ba96f0
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          password: ${{ secrets.SSH_PASSWORD }}
-          port: ${{ secrets.SSH_PORT }}
-          script: |
-            # --- CONFIGURATION ---
-            TARGET_DIR="/srv/customer/sites/${{secrets.SSH_PATH}}"
-            TEMP_DIR="/srv/customer/temp_deploy/"
+        run: |
+          sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -p ${{ secrets.SSH_PORT }} ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} '
+            TARGET_DIR="/srv/customer/sites/${{ secrets.SSH_PATH }}"
+            TEMP_DIR="/srv/customer/temp_deploy"
             
-            echo "Début du déploiement Backend"
-
             mkdir -p $TARGET_DIR
-
-            # --strip-components=0
             tar -xzf $TEMP_DIR/backend-build.tar.gz -C $TARGET_DIR/
 
             cd $TARGET_DIR
@@ -113,5 +105,4 @@ jobs:
             touch tmp/restart.txt
 
             rm $TEMP_DIR/backend-build.tar.gz
-
-            echo "Backend déployé et redémarré "
+          '
