--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,8 @@ jobs:
 
       - name: Build Frontend
         working-directory: ./frontend
-
+        env:
+          VITE_API_URL: "${{secrets.API_URL}}"
         run: |
           npm ci
           npm run build
